# May-Win-NSP-Project

./: .gitignore  LICENSE  README.md
.github/workflows/: ci-python.yml  ci-rust.yml
Demo/: .gitignore  app.py  gurobi.env  install.py  maywin_nsp.c  nps_gp_demo_1.ipynb  ortools_demo_logistics.ipynb  tuet_ryuki.json  ตารางเวร EMT-B Aug 2024.xlsx  ตารางเวร EMT-B July 2024.xlsx  ตารางเวร EMT-B Sep 2024.xlsx
Demo/data/: nurse_scheduling_dataset.json  ryuki_1.json
Demo/demo/: app.py
Demo/main/: __init__.py  gurobi.lic  gurobi_solver.py  main.py  normalize_module.py
Demo/main (archived)/: .gitignore  gurobi_solver.py
Demo/ui/: NurseScheduler.jsx  NurseSchedulerDemo.jsx  app.py  index.html  setup.py
backend/: Cargo.toml  README.md
backend/.cargo/: config.toml
backend/docs/: Backend_Report.md
backend/schema/: database_model.sql
backend/script/: app.py  requirements.txt
backend/src/: main.rs
backend/src/db/: mod.rs
backend/src/models/: mod.rs
backend/src/routes/: assignments.rs  availability.rs  coverage.rs  health.rs  kpi.rs  mod.rs  organizations.rs  policy_sets.rs  preferences.rs  scenarios.rs  shift_patterns.rs  sites.rs  solver_runs.rs  staffs.rs  units.rs  users.rs
chatbot/: .gitignore  app.py  nurse.db  nurse_prefs.db  nurse_prefs_dev.db  requirements.txt
chatbot/manager/: manager.py  synthetic_schedule_2026-06_30nurses_allER.json
chatbot/rasa/: config.yml  domain.yml
data/: README.md
data/samples/: synthetic_schedule_2026-04_set01_53nurses_allER.json  synthetic_schedule_2026-04_set02_57nurses_allER.json  (+48 more)
docs/: references.bib
(+4 files in other folders)
